@@ -289,6 +289,11 @@ Other changes:
 
 * <rpm> has new attributes failonerror and showoutput attributes.
 
+* Added two tutorials
+  - beginner: introduction into Ant
+  - task developers: using path, fileset etc
+
+
 Fixed bugs:
 -----------
 
